--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.3.0",
     "react-pin-input": "^1.3.1",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
