--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-phone-input-2": "^2.15.1",
     "react-pin-input": "^1.3.1",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
